--- a/app/src/main/res/layout/item_mensaje.xml
+++ b/app/src/main/res/layout/item_mensaje.xml
@@ -13,12 +13,16 @@
         android:focusable="true"
         android:background="?attr/selectableItemBackgroundBorderless">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
         <android.support.v7.widget.AppCompatImageView
             android:id="@+id/imgMensaje"
-            android:src="@drawable/ic_mensaje_black_80dp"
+            android:src="@drawable/ic_message_black_80dp"
             android:layout_width="@dimen/img.item.size"
-            android:layout_height="@dimen/img.item.size"
-            android:layout_alignParentStart="true"/>
+            android:layout_height="@dimen/img.item.size"/>
 
         <android.support.v7.widget.AppCompatTextView
             android:id="@+id/tvTituloMensaje"
@@ -27,11 +31,27 @@
             android:hint="@string/mensaje.hint.titulo"
             android:maxLines="2"
             android:textAppearance="?android:textAppearanceLarge"
-            android:layout_margin="@dimen/main.padding.small"
-            android:layout_toEndOf="@+id/imgMensaje"
-            android:layout_centerVertical="true"
-            android:layout_toStartOf="@+id/tvEstado"/>
+            android:layout_margin="@dimen/main.padding.small"/>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <android.support.v7.widget.AppCompatTextView
+                    android:id="@+id/tvContenidoMensaje"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/mensaje.hint.contenido"
+                    android:textAppearance="?android:textAppearanceLarge"
+                    android:layout_margin="@dimen/main.padding.small"/>
+            </LinearLayout>
+
+        </LinearLayout>
+
+
+
+        <!--
         <android.support.v7.widget.AppCompatTextView
             android:id="@+id/tvEstado"
             android:layout_width="wrap_content"
@@ -44,5 +64,7 @@
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:tint="@android:color/white"/>
+            -->
+
     </RelativeLayout>
 </android.support.v7.widget.CardView>
