--- a/app/src/main/res/menu/account.xml
+++ b/app/src/main/res/menu/account.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
-        android:id="@+id/action_music"
+    <!--<item
         android:orderInCategory="100"
-        android:title="optiones"
+        android:title="Servicio de Mensajería" />
+    <item
+        android:id="@+id/stop_service_mensajeria"
+        android:orderInCategory="100"
+        android:title="Detener"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/start_service_mensajeria"
+        android:orderInCategory="100"
+        android:title="Activar"
+        app:showAsAction="never" />-->
 </menu>
