--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/idActivityLogin"
@@ -14,48 +14,33 @@
         android:orientation="vertical"
         android:padding="15dp">
 
-    <TextView
-        android:id="@+id/registerTitleText"
-        android:layout_width="280dp"
-        android:layout_height="35dp"
-        android:text="@string/registerTitle"
-        android:theme="@style/fontTitle"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.211"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.077" />
+        <TextView
+            android:id="@+id/registerTitleText"
+            android:layout_width="280dp"
+            android:layout_height="35dp"
+            android:text="@string/registerTitle"
+            android:layout_marginBottom="20dp"
+            android:theme="@style/fontTitle" />
 
-    <EditText
-        android:id="@+id/emailText"
-        android:layout_width="346dp"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/introEmail"
-        android:inputType="textEmailAddress"
-        android:theme="@style/fontTextNormal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.575"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.193" />
+        <EditText
+            android:id="@+id/emailText"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="@string/introEmail"
+            android:layout_marginBottom="20dp"
+            android:inputType="textEmailAddress"
+            android:theme="@style/fontTextNormal" />
 
-    <EditText
-        android:id="@+id/passText"
-        android:layout_width="347dp"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/introPass"
-        android:inputType="textPassword"
-        android:theme="@style/fontTextNormal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.591"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.335" />
+        <EditText
+            android:id="@+id/passText"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="@string/introPass"
+            android:inputType="textPassword"
+            android:theme="@style/fontTextNormal"
+            android:layout_marginBottom="20dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -71,17 +56,9 @@
                 android:layout_width="44dp"
                 android:layout_height="wrap_content"
                 android:background="?attr/selectableItemBackgroundBorderless"
-                android:theme="@style/gomainBtn"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.836"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.518" />
+                android:theme="@style/gomainBtn" />
         </LinearLayout>
 
     </LinearLayout>
 
-
-
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
