--- a/app/src/main/res/layout/item_mensaje.xml
+++ b/app/src/main/res/layout/item_mensaje.xml
@@ -1,54 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardUseCompatPadding="true">
+    app:cardUseCompatPadding="true"
+    app:contentPaddingLeft="@dimen/activity_horizontal_margin"
+    app:contentPaddingRight="@dimen/activity_horizontal_margin"
+    app:contentPaddingTop="8dp"
+    app:contentPaddingBottom="8dp"
+    android:layout_marginRight="@dimen/activity_horizontal_margin"
+    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+    android:layout_marginTop="8dp"
+    android:minHeight="?attr/listPreferredItemHeight"
+    android:layout_height="wrap_content"
+    android:background="?attr/selectableItemBackgroundBorderless">
 
-    <RelativeLayout
-        android:id="@+id/containerMain"
+
+    <LinearLayout
+        android:id="@+id/linealEncabezado"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:clickable="true"
         android:focusable="true"
-        android:background="?attr/selectableItemBackgroundBorderless">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:orientation="horizontal">
 
         <android.support.v7.widget.AppCompatImageView
             android:id="@+id/imgMensaje"
             android:src="@drawable/ic_message_black_80dp"
             android:layout_width="@dimen/img.item.size"
-            android:layout_height="@dimen/img.item.size"/>
+            android:layout_height="wrap_content"/>
 
-        <android.support.v7.widget.AppCompatTextView
-            android:id="@+id/tvTituloMensaje"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/mensaje.hint.titulo"
-            android:maxLines="2"
-            android:textAppearance="?android:textAppearanceLarge"
-            android:layout_margin="@dimen/main.padding.small"/>
 
-            <LinearLayout
+             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="vertical">
 
-                <android.support.v7.widget.AppCompatTextView
+                <TextView
+                    android:id="@+id/tvTituloMensaje"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/main.padding.small"
+                    android:hint="@string/mensaje.hint.titulo"
+                    android:maxLines="2"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+
+                <!-- android:textAppearance="?android:textAppearanceLarge"-->
+
+                <TextView
                     android:id="@+id/tvContenidoMensaje"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/main.padding.small"
                     android:hint="@string/mensaje.hint.contenido"
-                    android:textAppearance="?android:textAppearanceLarge"
-                    android:layout_margin="@dimen/main.padding.small"/>
+                    android:maxLines="6"
+
+                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
             </LinearLayout>
 
         </LinearLayout>
-
 
 
         <!--
@@ -66,5 +76,4 @@
             android:tint="@android:color/white"/>
             -->
 
-    </RelativeLayout>
 </android.support.v7.widget.CardView>
