--- a/app/src/main/res/menu/account.xml
+++ b/app/src/main/res/menu/account.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <!--<item
+    <item
         android:orderInCategory="100"
         android:title="Servicio de Mensajería" />
     <item
@@ -13,5 +13,5 @@
         android:id="@+id/start_service_mensajeria"
         android:orderInCategory="100"
         android:title="Activar"
-        app:showAsAction="never" />-->
+        app:showAsAction="never" />
 </menu>
